[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_mdm*"]

[project]
name = "ml_mdm"
authors = [{name = "Apple"}]
readme = "README.md"
version = "1.0"
requires-python = ">3.8"
description = "A python package to simplify the creation of text conditioned image diffusion models"

dependencies = [
    "dataclass-wizard",
    "einops",
    "fastapi>=0.109.1", # Required due to CVE-2024-24762
    "gradio>=4.14", # Required due to CVE-2023-6572
    "httpx==0.24.1",
    "imageio[ffmpeg]",
    "matplotlib",
    "mlx-data",
    "numpy",
    "pytorch-model-summary",
    "rotary-embedding-torch",
    "simple-parsing==0.1.5",
    "tensorboardX==2.6.2.2",
    "tensorboard==2.16.2",
    "torchinfo",
    "torchmetrics[image]",
    "torchvision",
    "transformers",
    "sentencepiece",
    "boto3",
    "torch==2.2.2",
    "pytest",
    "pytest-cov",
    "pre-commit"
]

[project.optional-dependencies]
data_prep = [
    "img2dataset"
]

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "NUMERIC", "FIRSTPARTY", "LOCALFOLDER"]
known_numeric = ["torch", "torchvision", "numpy", "jax", "flax", "mlx"]


[tool.pytest.ini_options]
addopts = "--cov=ml_mdm"
markers = [
    "gpu" # tests that require a gpu
]
